--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/58fb884d9c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Oh My Food</title>
 </head>
+
 <body>
     <header>
         <h1>ohmyfood</h1>
     </header>
+    <main>
+        <div class="localisation">
+            <i class="fa-sharp fa-solid fa-location-dot"></i>
+            <h1>Paris, Belleville</h1>
+        </div>
+    </main>
 
 </body>
+
 </html>
