--- a/index.html
+++ b/index.html
@@ -21,8 +21,23 @@
     <main>
         <div class="localisation">
             <i class="fa-sharp fa-solid fa-location-dot"></i>
-            <h1>Paris, Belleville</h1>
+            <h2>Paris, Belleville</h2>
         </div>
+        <section class="reservation">
+            <h2>
+                Réservez le menu qui <br>
+                vous convient
+            </h2>
+            <p>
+                Découvrez des restaurants d’exception, sélectionnés par nos soins.
+            </p>
+            <button>
+                Explorer nos restaurants
+            </button>
+            <div class="gradient">
+
+            </div>
+        </section>
     </main>
 
 </body>
