Ajout card de fonctionnnement + scss

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/58fb884d9c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Oh My Food</title>
 </head>
 
@@ -37,6 +37,14 @@
             <div class="gradient">
 
             </div>
+        </section>
+        <section class="function">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li><span class="pin">1</span><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li> <span class="pin">1</span> <i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li><span class="pin">1</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            </ol>
         </section>
     </main>
 
