Cartes et Menu Carte terminé

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <section class="reservation">
             <h2>
-                Réservez le menu qui <br>
+                Réservez le menu qui
                 vous convient
             </h2>
             <p>
@@ -46,6 +46,61 @@
                 <li><span class="pin">1</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
+        <section class="menu">
+            <h2>Restaurant</h2>
+            <div class="menu__card">
+
+
+                <a href="#" class="card new">
+                    <div class="card__image">
+                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                    </div>
+
+                    <div class="card__content">
+                        <h3>Restaurant-1</h3>
+                        <p>localisation</p>
+                    </div>
+
+                </a>
+                <a href="#" class="card new">
+                    <div class="card__image">
+                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                    </div>
+
+                    <div class="card__content">
+                        <h3>Restaurant-2</h3>
+                        <p>localisation</p>
+                    </div>
+
+                </a>
+            </div>
+            <div class="menu__card">
+                <a href="#" class="card new">
+                    <div class="card__image">
+                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                    </div>
+
+                    <div class="card__content">
+                        <h3>Restaurant-3</h3>
+                        <p>localisation</p>
+                    </div>
+
+                </a>
+                <a href="#" class="card new">
+                    <div class="card__image">
+                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                    </div>
+
+                    <div class="card__content">
+                        <h3>Restaurant-4</h3>
+                        <p>localisation</p>
+                    </div>
+
+                </a>
+            </div>
+
+        </section>
+
     </main>
 
 </body>
