Creation du Footer

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <div class="card__content">
                         <h3>Restaurant-1</h3>
                         <p>localisation</p>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
 
                 </a>
@@ -70,12 +71,13 @@
                     <div class="card__content">
                         <h3>Restaurant-2</h3>
                         <p>localisation</p>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
 
                 </a>
             </div>
             <div class="menu__card">
-                <a href="#" class="card new">
+                <a href="#" class="card ">
                     <div class="card__image">
                         <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
                     </div>
@@ -83,10 +85,11 @@
                     <div class="card__content">
                         <h3>Restaurant-3</h3>
                         <p>localisation</p>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
 
                 </a>
-                <a href="#" class="card new">
+                <a href="#" class="card ">
                     <div class="card__image">
                         <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
                     </div>
@@ -94,13 +97,22 @@
                     <div class="card__content">
                         <h3>Restaurant-4</h3>
                         <p>localisation</p>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
 
                 </a>
             </div>
 
         </section>
-
+        <footer>
+            <h2>ohmyfood</h2>
+            
+            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+            
+            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+            <p>Mention légales</p>
+            <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
+        </footer>
     </main>
 
 </body>
