Creation Animation  Heart Favoris

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <h3>Restaurant-1</h3>
                         <p>localisation</p>
                         <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
 
                 </a>
@@ -72,6 +73,7 @@
                         <h3>Restaurant-2</h3>
                         <p>localisation</p>
                         <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
 
                 </a>
@@ -86,6 +88,7 @@
                         <h3>Restaurant-3</h3>
                         <p>localisation</p>
                         <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
 
                 </a>
@@ -98,6 +101,7 @@
                         <h3>Restaurant-4</h3>
                         <p>localisation</p>
                         <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
 
                 </a>
@@ -105,13 +109,18 @@
 
         </section>
         <footer>
+
             <h2>ohmyfood</h2>
-            
-            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
-            
-            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
-            <p>Mention légales</p>
+
+
+            <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restauran </a>t</p>
+
+
+            <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
+
+            <p><a href="">Mention légales</a></p>
             <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
+
         </footer>
     </main>
 
