Base pages menu  restaurant Fonctionnelle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+    
+<div class="loading-page">
+    <i class="fas fa-spinner loader"></i> <!-- Icône de chargement Font Awesome -->
+</div>
     <header>
         <h1>ohmyfood</h1>
     </header>
@@ -51,7 +55,7 @@
             <div class="menu__card">
 
 
-                <a href="#" class="card new">
+                <a href="/restaurants/restaurant-1.html" class="card new">
                     <div class="card__image">
                         <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
                     </div>
