Pages d'animation et chargement créer

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
 </head>
 
 <body>
-    
-<div class="loading-page">
-    <i class="fas fa-spinner loader"></i> <!-- Icône de chargement Font Awesome -->
-</div>
+    <div class="loader">
+        <span class=" letter l1 ">o</span>
+        <span class="letter l2">h</span>
+        <span class="letter l3">m</span>
+        <span class="letter l4">y</span>
+        <span class="letter l5 ">f</span>
+        <span class="letter l6">o</span>
+        <span class="letter l7">o</span>
+        <span class="letter l8">d</span>
+        <span class="letter l9">!</span>
+    </div>
+
     <header>
         <h1>ohmyfood</h1>
     </header>
