--- a/restaurants/restaurant-1.html
+++ b/restaurants/restaurant-1.html
@@ -26,8 +26,7 @@
 
     <main class="resto__main">
         <div class="resto__title">
-            <h2 class="title-restaurant">La palette du gout
-            </h2>
+            <h2 class="title-restaurant">La palette du gout</h2>
 
             <div class="btn-heart">
                 <i class="fa-regular fa-heart"></i>
