Finition SCSS fonctionnel de base

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             <button>
                 Explorer nos restaurants
             </button>
-            <div class="gradient">
-
-            </div>
+            
         </section>
         <section class="function">
-            <h2>Fonctionnement</h2>
-            <ol>
-                <li><span class="pin">1</span><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                <li> <span class="pin">1</span> <i class="fas fa-list-ul"></i>Composez votre menu</li>
-                <li><span class="pin">1</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
-            </ol>
+            <div class="pan-function">
+                <h2>Fonctionnement</h2>
+                <ol>
+                    <li><span class="pin">1</span><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                    <li> <span class="pin">1</span> <i class="fas fa-list-ul"></i>Composez votre menu</li>
+                    <li><span class="pin">1</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
+                </ol>
+            </div>
         </section>
         <section class="menu">
             <h2>Restaurant</h2>
@@ -120,21 +120,23 @@
             </div>
 
         </section>
+    </main>
         <footer>
 
-            <h2>ohmyfood</h2>
-
-
-            <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restauran </a>t</p>
-
-
-            <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
-
-            <p><a href="">Mention légales</a></p>
-            <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
-
-        </footer>
-    </main>
+            <div class="footer">
+                <div class="footer__logo">
+                    <h2>ohmyfood</h2>
+                </div>
+                <div class="footer__engage fe1">
+                    <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restaurant </a></p>
+                    <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
+                </div>
+                <div class="footer__engage fe2">
+                    <p><a href="">Mention légales</a></p>
+                    <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
+                </div>
+            </div>
+    </footer>
 
 </body>
 
