--- a/restaurants/restaurant-1.html
+++ b/restaurants/restaurant-1.html
@@ -16,67 +16,193 @@
 
 <body>
     <header>
-        <div class="back-to-index"> 
+        <div class="back-to-index">
             <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        </div> 
+        </div>
         <h1>ohmyfood</h1>
     </header>
 
-        <div class="banner"><img class="cover-img" src="../assets/images/restaurants/Restaurant-1.jpg" alt="Description of the image"></div>
+    <div class="banner"><img class="cover-img" src="../assets/images/restaurants/Restaurant-1.jpg"
+            alt="Description of the image"></div>
 
-    <main class="resto__main">
+    <main class="resto__main contain">
+
         <div class="resto__title">
             <h2 class="title-restaurant">La palette du gout</h2>
-
             <div class="btn-heart">
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart "></i>
             </div>
         </div>
+        <section class="menu-resto">
 
-<section class="menu-resto">
-    <h3 class="title-plat">
-        plats
+            <div class="pan-item">
 
-    </h3>
-    <article class="menu-item">
-        <div class="menu-item__header">
-            <h3 class="menu-item__title">Titre </h3>
-            <p class="menu-item__description">Description</p>
-        </div>
-        <div class="menu-item__price">25€</div>
-        <div class="menu-item__confirmation">
-            <div class="menu-item__icon-wrap">
-                <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                <div class="headline">
+                    <h3 class="title-plat">
+                        Dessert
+                    </h3>
+                    <span class="underline"></span>
+                </div>
+
+
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
             </div>
-        </div>
-    </article>
-    
+
+            <div class="pan-item">
+
+                <div class="headline">
+                    <h3 class="title-plat">
+                        Dessert
+                    </h3>
+                    <span class="underline"></span>
+                </div>
 
 
-    <article class="menu-resto__encart">
-    </article>
-    <article class="menu-resto__encart"><h3 class="title-plat">Plat</h3>
-    </article>
-</section>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div class="pan-item">
+
+                <div class="headline">
+                    <h3 class="title-plat">
+                        Dessert
+                    </h3>
+                    <span class="underline"></span>
+                </div>
+
+
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Titre </h3>
+                        <p class="menu-item__description">Description</p>
+                    </div>
+                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <button class="btn ">
+                <p>Commander</p>
+            </button>
+        </section>
+
 
 
     </main>
 
 
-    <footer>
 
-        <h2>ohmyfood</h2>
-
-
-        <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restaurants </a>t</p>
-
-
-        <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
-
-        <p><a href="">Mention légales</a></p>
-        <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
-
+    <footer class="footer">
+        <div class="footer__logo">
+            <h2>ohmyfood</h2>
+        </div>
+        <div class="footer__engage fe1">
+            <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restaurant </a></p>
+            <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
+        </div>
+        <div class="footer__engage fe2">
+            <p><a href="">Mention légales</a></p>
+            <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
+        </div>
     </footer>
 </body>
 
