--- a/index.html
+++ b/index.html
@@ -36,17 +36,15 @@
             <h2>Paris, Belleville</h2>
         </div>
         <section class="reservation">
-            <h2>
-                Réservez le menu qui
-                vous convient
+            <h2 class="reservation__title">
+                Réservez le menu qui vous convient
             </h2>
-            <p>
+            <p class="reservation__description">
                 Découvrez des restaurants d’exception, sélectionnés par nos soins.
             </p>
-            <button>
+            <button class="reservation__button">
                 Explorer nos restaurants
             </button>
-            
         </section>
         <section class="function">
             <div class="pan-function">
@@ -63,27 +61,27 @@
             <div class="menu__card">
 
 
-                <a href="/restaurants/restaurant-1.html" class="card new">
+                <a href="/restaurants/La-palette-du-gout.html" class="card new">
                     <div class="card__image">
-                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Plat Restaurant-1">
                     </div>
 
                     <div class="card__content">
-                        <h3>Restaurant-1</h3>
-                        <p>localisation</p>
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
                         <i class="fa-regular fa-heart"></i>
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
                 </a>
-                <a href="#" class="card new">
+                <a href="/restaurants/La-note-enchantée.html" class="card new">
                     <div class="card__image">
-                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                        <img src="/assets/images/restaurants/Restaurant-2.jpg" alt="Image Restaurant-2">
                     </div>
 
                     <div class="card__content">
-                        <h3>Restaurant-2</h3>
-                        <p>localisation</p>
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
                         <i class="fa-regular fa-heart"></i>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -91,27 +89,27 @@
                 </a>
             </div>
             <div class="menu__card">
-                <a href="#" class="card ">
+                <a href="/restaurants/Á-la-Française.html" class="card ">
                     <div class="card__image">
-                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                        <img src="/assets/images/restaurants/Restaurant-3.jpg" alt="Image Restaurant-1">
                     </div>
 
                     <div class="card__content">
-                        <h3>Restaurant-3</h3>
-                        <p>localisation</p>
+                        <h3>À la française</h3>
+                        <p>Citée Rouge </p>
                         <i class="fa-regular fa-heart"></i>
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
                 </a>
-                <a href="#" class="card ">
+                <a href="/restaurants/Le-délice-des-sens.html" class="card ">
                     <div class="card__image">
-                        <img src="/assets/images/restaurants/Restaurant-1.jpg" alt="Image Restaurant-1">
+                        <img src="/assets/images/restaurants/Restaurant-4.jpg" alt="Image Restaurant-1">
                     </div>
 
                     <div class="card__content">
-                        <h3>Restaurant-4</h3>
-                        <p>localisation</p>
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
                         <i class="fa-regular fa-heart"></i>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -121,21 +119,21 @@
 
         </section>
     </main>
-        <footer>
+    <footer>
 
-            <div class="footer">
-                <div class="footer__logo">
-                    <h2>ohmyfood</h2>
-                </div>
-                <div class="footer__engage fe1">
-                    <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restaurant </a></p>
-                    <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
-                </div>
-                <div class="footer__engage fe2">
-                    <p><a href="">Mention légales</a></p>
-                    <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
-                </div>
+        <div class="footer">
+            <div class="footer__logo">
+                <h2>ohmyfood</h2>
             </div>
+            <div class="footer__engage fe1">
+                <p><i class="fa-solid fa-utensils"></i><a href="">Proposer un restaurant </a></p>
+                <p><i class="fa-solid fa-handshake-angle"></i><a href="">Devenir partenaire</a></p>
+            </div>
+            <div class="footer__engage fe2">
+                <p><a href="">Mention légales</a></p>
+                <p><a href="mailto:contact@ohmyfood.com">Contacts</a></p>
+            </div>
+        </div>
     </footer>
 
 </body>
