--- a/restaurants/Á-la-Française.html
+++ b/restaurants/Á-la-Française.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/58fb884d9c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/style.css">
-    <title>La palette du gout</title>
+    <title> Á la Française</title>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
         <h1>ohmyfood</h1>
     </header>
 
-    <div class="banner"><img class="cover-img" src="../assets/images/restaurants/Restaurant-1.jpg"
+    <div class="banner"><img class="cover-img" src="../assets/images/restaurants/Restaurant-4.jpg"
             alt="Description of the image"></div>
 
     <main class="resto__main contain">
 
         <div class="resto__title">
-            <h2 class="title-restaurant">La palette du gout</h2>
+            <h2 class="title-restaurant">Á la Française</h2>
             <div class="btn-heart">
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart "></i>
@@ -40,7 +40,7 @@
 
                 <div class="headline">
                     <h3 class="title-plat">
-                        Dessert
+                        Entrées
                     </h3>
                     <span class="underline"></span>
                 </div>
@@ -48,8 +48,8 @@
 
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Tartare de poulpe acidulé </h3>
+                        <p class="menu-item__description">au zestes d'orange</p>
                     </div>
                     <div class="menu-item__price">25€</div>
                     <div class="menu-item__confirmation">
@@ -60,10 +60,10 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Velouté de légume d'antan </h3>
+                        <p class="menu-item__description">Carotte, panais, topinambour</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">35€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -72,10 +72,61 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Soupe à l'oignon </h3>
+                        <p class="menu-item__description">Revisitée</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">20€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div class="pan-item">
+
+                <div class="headline">
+                    <h3 class="title-plat">
+                        Plats
+                    </h3>
+                    <span class="underline"></span>
+                </div>
+
+
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Cocquilles Saint-Jacques </h3>
+                        <p class="menu-item__description">
+                            Accompagnées d'une purée de panais
+                           
+                            </p>
+                    </div>
+                    <div class="menu-item__price">45€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Magret de canard </h3>
+                        <p class="menu-item__description">Et parmentier de pomme de terre</p>
+                    </div>
+                    <div class="menu-item__price">35€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Pigeonneau d'ille-et-Vilaine </h3>
+                        <p class="menu-item__description">Sur son lit de gnochis au légumes</p>
+                    </div>
+                    <div class="menu-item__price">44€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -96,8 +147,8 @@
 
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Pétales de violettes glacés</h3>
+                        <p class="menu-item__description">et purée de noisette</p>
                     </div>
                     <div class="menu-item__price">25€</div>
                     <div class="menu-item__confirmation">
@@ -108,8 +159,8 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Fondant au chocolat </h3>
+                        <p class="menu-item__description">Revisité</p>
                     </div>
                     <div class="menu-item__price">25€</div>
                     <div class="menu-item__confirmation">
@@ -120,56 +171,8 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
-                    </div>
-                    <div class="menu-item__price">25€</div>
-                    <div class="menu-item__confirmation">
-                        <div class="menu-item__icon-wrap">
-                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </article>
-            </div>
-
-            <div class="pan-item">
-
-                <div class="headline">
-                    <h3 class="title-plat">
-                        Dessert
-                    </h3>
-                    <span class="underline"></span>
-                </div>
-
-
-                <article class="menu-item">
-                    <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
-                    </div>
-                    <div class="menu-item__price">25€</div>
-                    <div class="menu-item__confirmation">
-                        <div class="menu-item__icon-wrap">
-                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </article>
-                <article class="menu-item">
-                    <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
-                    </div>
-                    <div class="menu-item__price">25€</div>
-                    <div class="menu-item__confirmation">
-                        <div class="menu-item__icon-wrap">
-                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </article>
-                <article class="menu-item">
-                    <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Millefeuille croustillant </h3>
+                        <p class="menu-item__description">Myrtilles et pâte d’amande</p>
                     </div>
                     <div class="menu-item__price">25€</div>
                     <div class="menu-item__confirmation">
@@ -181,7 +184,7 @@
             </div>
 
             <button class="btn ">
-                <p>Commander</p>
+                Commander
             </button>
         </section>
 
