--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -36,7 +36,7 @@
         </div>
         <section class="menu-resto">
 
-            <div class="pan-item">
+            <div class="pan-item delay-item1">
 
                 <div class="headline">
                     <h3 class="title-plat">
@@ -84,7 +84,7 @@
                 </article>
             </div>
 
-            <div class="pan-item">
+            <div class="pan-item delay-item2">
 
                 <div class="headline">
                     <h3 class="title-plat">
@@ -132,7 +132,7 @@
                 </article>
             </div>
 
-            <div class="pan-item">
+            <div class="pan-item delay-item3">
 
                 <div class="headline">
                     <h3 class="title-plat">
