modif lien image , pages

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <div class="menu__card">
 
 
-                <a href="restaurants/La-palette-du-gout.html" class="card new">
+                <a href="../restaurants/La-palette-du-gout.html" class="card new">
                     <div class="card__image">
-                        <img src="assets/images/restaurants/Restaurant-1.jpg" alt="Image Plat Restaurant-1">
+                        <img src="../assets/images/restaurants/Restaurant-1.jpg" alt="Image Plat Restaurant-1">
                     </div>
 
                     <div class="card__content">
