--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
         <h1>ohmyfood</h1>
     </header>
     <main>
-        <div class="localisation">
+        <form class="localisation">
             <i class="fa-sharp fa-solid fa-location-dot"></i>
-            <h2>Paris, Belleville</h2>
-        </div>
+            <input type="text" id="location-input" placeholder="Paris, Belleville" />
+        </form>
+
+
+
+
+
         <section class="reservation">
             <h2 class="reservation__title">
                 Réservez le menu qui vous convient
