--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
     <main>
         <form class="localisation">
             <i class="fa-sharp fa-solid fa-location-dot"></i>
-            <input type="text" id="location-input" placeholder="Paris, Belleville" />
+            <input type="text" placeholder="Paris, Belleville" />
         </form>
-
-
 
 
 
@@ -66,9 +64,9 @@
             <div class="menu__card">
 
 
-                <a href="../restaurants/La-palette-du-gout.html" class="card new">
+                <a href="restaurants/La-palette-du-gout.html" class="card new">
                     <div class="card__image">
-                        <img src="../assets/images/restaurants/Restaurant-1.jpg" alt="Image Plat Restaurant-1">
+                        <img src="assets/images/restaurants/Restaurant-1.jpg" alt="Image Plat Restaurant-1">
                     </div>
 
                     <div class="card__content">
