--- a/restaurants/La-note-enchantée.html
+++ b/restaurants/La-note-enchantée.html
@@ -40,7 +40,7 @@
 
                 <div class="headline">
                     <h3 class="title-plat">
-                        Dessert
+                        Entrées
                     </h3>
                     <span class="underline"></span>
                 </div>
@@ -48,8 +48,8 @@
 
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Ravioles de foie gras  </h3>
+                        <p class="menu-item__description">Accompagnées de leur crème à la truffe</p>
                     </div>
                     <div class="menu-item__price">25€</div>
                     <div class="menu-item__confirmation">
@@ -60,10 +60,10 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Caviar osciètre  </h3>
+                        <p class="menu-item__description">Sur blini à la farine de blé noir</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">35€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -72,10 +72,22 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Homard et espuma de potiron </h3>
+                        <p class="menu-item__description">Marinés aux zestes d'orange</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">20€</div>
+                    <div class="menu-item__confirmation">
+                        <div class="menu-item__icon-wrap">
+                            <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </article>
+                <article class="menu-item">
+                    <div class="menu-item__header">
+                        <h3 class="menu-item__title">Foie gras de canard cuit entier </h3>
+                        <p class="menu-item__description">Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="menu-item__price">35€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -88,7 +100,7 @@
 
                 <div class="headline">
                     <h3 class="title-plat">
-                        Dessert
+                        Plats
                     </h3>
                     <span class="underline"></span>
                 </div>
@@ -96,10 +108,10 @@
 
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Noix de coquilles Saint-Jacques </h3>
+                        <p class="menu-item__description">Sur lit de purée de céleri-rave</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">40€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -108,10 +120,10 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Langoustine poêlée </h3>
+                        <p class="menu-item__description">Purée de patate douce</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">35€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -120,10 +132,10 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Mijoté de queue de bœuf  </h3>
+                        <p class="menu-item__description">Et riz sauvage aux zestes de citron</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">45€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -136,7 +148,7 @@
 
                 <div class="headline">
                     <h3 class="title-plat">
-                        Dessert
+                        Desserts
                     </h3>
                     <span class="underline"></span>
                 </div>
@@ -144,10 +156,10 @@
 
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Macaron noisette et chocolat </h3>
+                        <p class="menu-item__description">Glace au caramel brun et sel de Guérande</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">18€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -156,10 +168,10 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Baba au rhum revisité  </h3>
+                        <p class="menu-item__description">Avec son coulis de citron</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">22€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
@@ -168,10 +180,10 @@
                 </article>
                 <article class="menu-item">
                     <div class="menu-item__header">
-                        <h3 class="menu-item__title">Titre </h3>
-                        <p class="menu-item__description">Description</p>
+                        <h3 class="menu-item__title">Tarte au citron meringuée  </h3>
+                        <p class="menu-item__description">Déstructurée</p>
                     </div>
-                    <div class="menu-item__price">25€</div>
+                    <div class="menu-item__price">23€</div>
                     <div class="menu-item__confirmation">
                         <div class="menu-item__icon-wrap">
                             <i class="fas fa-check menu-item__icon" aria-hidden="true"></i>
